Portfolio Website/css/style.css
/* ... */
@media (max-width: 637px) {
  html {
    overflow: scroll;
  }

  body {
    background: radial-gradient(circle, #0051ff 14%, #29457b, #204579, #2b2f35);
    background-size: 400% 400%;
    animation: gradient 10s ease infinite;
    height: 100vh;
    z-index: -1;
    animation: fadeInAnimation ease 2.3s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    height: 100%;
    overflow: auto;
    scroll-behavior: smooth;
  }

  .summary {
    max-width: 100%;
    font-size: 14px;
    padding-top: 0px;
    padding: 20px;
  }

  #animated-background {
    filter: blur(100px);
  }

  #title {
    font-size: 18px;
  }

  .cursor-glow {
    display: none;
  }

  #social {
    text-align: left;
    position: relative;
    padding-top: 30px;
    padding-bottom: 0px;
    font-size: 13px;
    -webkit-tap-highlight-color: transparent;
    padding: 14px;
  }

  #soctitle {
    display: none;
  }

  .content {
    margin-left: 0%;
    padding: 14px;
  }

  #glass-overlay {
    backdrop-filter: blur(100px); /* Frosted glass effect */
    background-color: black;
  }

  #home {
    flex-direction: column;
    overflow: hidden;
  }

  .card {
    border-radius: 10px;
    padding: 3px 0px 3px;
  }

  .left-half {
    position: relative;
    width: 100%;
    text-align: center;
    overflow: hidden;
    padding-top: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
    background: none;
  }

  .left-half nav a {
    width: 35%;
    padding: 5px;
    background: none;
  }

  #navn1 img {
    width: 25px;
    filter: invert(1);
    -webkit-tap-highlight-color: transparent;
  }

  #navn1 {
    margin-bottom: 15px;
    -webkit-tap-highlight-color: transparent;
  }

  #images {
    max-width: 38%;
  }

  #loc {
    margin-left: 0px;
  }

  #name {
    font-family: "Libre Franklin", sans-serif;
    text-align: left;
    font-size: 1.5rem;
    letter-spacing: -1px;
    margin-top: 25px;
  }

  .subheading {
    font-family: "Libre Franklin", sans-serif;
    font-size: 1rem;
    font-weight: 500;
    text-align: left;
    padding-left: 15px;
  }

  .right-half {
    width: 100%;
    margin-top: 0px;
    background-attachment: scroll;
    width: calc(100% - 20px);
    padding: 10px;
    padding-top: 0px;
    font-size: 14px;
    text-align: left;
    margin-left: 0%;
  }

  .left-half navn1 a:hover {
    opacity: 0.5;
  }

  .contentstyle {
    max-width: 88%; /* Adjust the width as desired */
    margin: 0 auto; /* Centers the element */
    margin-bottom: 35px;
  }

  .contentstyle:hover {
    background-color: rgba(255, 255, 255, 0.23);
    border-radius: 10px;
  }

  .heading {
    text-decoration-thickness: 1px;
    padding-bottom: 0px;
  }

  .box {
    width: 12%;
    font-size: 25px;
  }

  .box a {
    margin-top: 5px;
    font-size: 15px;
    margin-left: 0px;
  }

  .icon {
    color: rgb(255, 255, 255);
    padding-top: 8px;
    margin-left: 17px;
    font-size: 20px;
  }

  .right-side-content {
    padding: 10px;
    padding-top: 0;
  }

  .contentstyle.visible {
    opacity: 1;
    transform: translateY(0);
  }
}

